fixing sizing and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -25,10 +25,10 @@ html {
 html, body, .container {
 
     font-family: sans-serif;
+    font-weight: lighter;
     line-height: 1.3rem;
     margin: 0;
     padding: 0;
-
     position: relative;
     width: 100%;
     height: 100%;
@@ -39,6 +39,8 @@ hr {
     height: 1px;
     border-color: #7F132F;
     color: #7F132F;
+    margin-top: 2em;
+    margin-bottom: 2em;
 }
 
 .clearfix {
@@ -184,10 +186,10 @@ h5 {
 
 .content h2 {
     position: relative;
-    margin: 30px 0 40px;
+    margin-bottom: 1em;
     color: #7F132F;
     font-weight: 700;
-    font-size: 3em;
+    font-size: 4em;
 }
 
 .content p {
@@ -207,7 +209,6 @@ h5 {
     min-width: 65px;
     display: inline-block;
     text-align: center;
-    margin-bottom: 5em;
 }
 
 @media only screen and (max-width: 45em) {
@@ -270,6 +271,24 @@ h5 {
     .wrapper > section {
         background-position: 0 28em;
         background-size: 100%;
+    }
+
+    .img-left {
+        display: block;
+        margin: 0 auto;
+        width: 100%;
+        height: auto;
+        margin-bottom: 5px;
+        padding: 2%;
+        float: none;
+    }
+
+    img {
+        display: block;
+        margin: 0 auto;
+        width: 100%;
+        height: auto;
+        margin-bottom: 5px;
     }
 }
 
